--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 #map {
@@ -16,7 +17,7 @@ header {
     left: 0;
     right: 0;
     height: 4em;
-    background: linear-gradient(135deg, #1e5799 0%, #207cca 50%, #7db9e8 100%);
+    background: linear-gradient(135deg, #C84113 0%, #13294B 100%);
     z-index: 1;
     display: flex;
     align-items: center;
