--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
+    /* font-family: 'MuseoModerno', ExtraLight 200 Italic; */
+    /* MuseoModerno */
+   font-family: 'MuseoModerno', cursive;
 }
 
 #map {
