--- a/styles.css
+++ b/styles.css
@@ -34,3 +34,15 @@ h1 {
     margin: 0;
     color: #fff;
 }
+
+/* marker CSS */
+
+
+.marker {
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
